--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,7 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
-    "types": [
-      "./src/types.d.ts"
-    ] /* Specify type package names to be included without being referenced in a source file. */,
+    "types": [] /* Specify type package names to be included without being referenced in a source file. */,
 
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
@@ -111,6 +109,6 @@
     "skipLibCheck": true /* Tüm .d.ts dosyalarının tip kontrolünü atla. */,
     "declaration": true
   },
-  "include": ["src"],
+  "include": ["src", "src/types.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.stories.tsx"]
 }
